--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geoman-io/leaflet-geoman-free": "^2.14.2",
     "immer": "^10.0.2",
     "leaflet": "^1.9.4",
+    "leaflet-switch-basemap": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.2",
     "standard": "^17.1.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "wrangler": "^3.6.0"
   }
 }
