--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geoman-io/leaflet-geoman-free": "^2.14.2",
     "immer": "^10.0.2",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^3.8.0",
     "leaflet-switch-basemap": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
